modfiy gitconfig separate inclued gitconfig file

--- a/roles/git/gitconfig/templates/gitconfig.common.j2
+++ b/roles/git/gitconfig/templates/gitconfig.common.j2
@@ -5,5 +5,4 @@
     co = checkout
     ci = commit
     br = branch
-    graph = log --graph --date-order -C -M --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --all --date=short
-    gr = log --graph --date-order -C -M --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --all --date=short
+    gr = log --graph --date=short --format=\"%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
