--- a/roles/git/gitconfig/templates/gitconfig.user.j2
+++ b/roles/git/gitconfig/templates/gitconfig.user.j2
@@ -1,4 +1,4 @@
-[color]
+[user]
   user = {% if gitconfig.user is not none %} {{ gitconfig.user }} {% endif %}
 
   email = {% if gitconfig.email is not none %} {{ gitconfig.email }} {% endif %}
