It revived a bind key lost ctrl+a ctrl+e

--- a/roles/login-shell/dotfile/common/templates/common.sh.j2
+++ b/roles/login-shell/dotfile/common/templates/common.sh.j2
@@ -20,3 +20,6 @@ export LSCOLORS=gxfxcxdxbxegedabagacad
 # alias
 alias ll="ls -l"
 alias ls='ls -G'
+
+# 何故かこれをやらないとctrl a とかctrl e が効かなくなる
+bindkey -e
