--- a/roles/peco/add-configration/templates/peco.sh.j2
+++ b/roles/peco/add-configration/templates/peco.sh.j2
@@ -6,3 +6,27 @@ function peco-history-selection() {
 
 zle -N peco-history-selection
 bindkey '^R' peco-history-selection
+
+
+
+# see http://masawada.hatenablog.jp/entry/2015/02/02/210300
+# peco find directory
+function peco-find() {
+  local current_buffer=$BUFFER
+  local search_root=""
+  local file_path=""
+
+  if git rev-parse --is-inside-work-tree > /dev/null 2>&1; then
+    search_root=`git rev-parse --show-toplevel`
+  else
+    search_root=`pwd`
+  fi
+  file_path="$(find ${search_root} -maxdepth 5 | peco)"
+  BUFFER="${current_buffer} ${file_path}"
+  CURSOR=$#BUFFER
+  zle clear-screen
+}
+zle -N peco-find
+
+# bind keys
+bindkey '^f' peco-find
